tilesets endpoint (#3)
